# frozenCLIP-ncnn

./: CMakeLists.txt  README.md
models/: FrozenCLIPEmbedder_ncnn.py
src/: FrozenCLIPEmbedder.cpp  FrozenCLIPEmbedder.h  TransformerCLIP.cpp  TransformerCLIP.h  clip_tokenizer.cpp  clip_tokenizer.h  main.cpp
